--- a/style/burguer.css
+++ b/style/burguer.css
@@ -3,3 +3,12 @@
 
 /* FONT IN TEXT-> INTER */
 @import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap');
+
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    font-family: 'Inter';
+}
