--- a/style/burguer.css
+++ b/style/burguer.css
@@ -13,8 +13,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Standard geral */
 body {
     font-family: 'Inter';
     font-size: 18px;
     background-color: #141414;
+    color: #fff;
 }
