--- a/style/burguer.css
+++ b/style/burguer.css
@@ -20,3 +20,10 @@ body {
     background-color: #141414;
     color: #fff;
 }
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    padding: 0px 20px;
+    margin: auto;
+}
