--- a/style/burguer.css
+++ b/style/burguer.css
@@ -52,3 +52,14 @@ header .container {
     padding: 0 45px;
     gap: 50px;
 }
+
+header nav {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+header nav .leftside {
+    display: flex;
+    flex: 1;
+}
