--- a/style/burguer.css
+++ b/style/burguer.css
@@ -49,7 +49,7 @@ body {
 header .container {
     display: flex;
     align-items: center;
-    padding: 0 45px;
+    padding: 40px 0;
     gap: 50px;
 }
 
@@ -63,3 +63,18 @@ header nav .leftside {
     display: flex;
     flex: 1;
 }
+
+/* Menu Topics */
+header nav li {
+    margin: 0 30px;
+}
+
+header nav li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header nav li a:hover {
+    color: #999;
+}
+
