--- a/style/burguer.css
+++ b/style/burguer.css
@@ -49,7 +49,8 @@ body {
 header .container {
     display: flex;
     align-items: center;
-    padding: 40px 0;
+    padding-top: 45px;
+    padding-bottom: 45px;
     gap: 50px;
 }
 
@@ -92,4 +93,36 @@ header nav .button:hover {
     background-color: #fe6a0f;
     color: #141414;
     border-color: #141414;
+}
+
+header .menu {
+    display: none;
+    flex: 1;
+    justify-content: end;
+}
+
+header .menu-icon {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+header .menu-icon div {
+    height: 6px;
+    background-color: #fff;
+}
+
+
+/* RESPONSIVE */
+@media (max-width: 820px) {
+    header nav {
+        display: none;
+    }
+
+    header .menu {
+        display: flex;
+    }
 }
