Feat: section HERO

--- a/style/burguer.css
+++ b/style/burguer.css
@@ -79,7 +79,7 @@ header nav li a:hover {
     color: #999;
 }
 
-/* Button */
+/* Button and icons */
 header nav .button {
     display: block;
     border: 1px solid #fff;
