Style: Responsive in leftside - rightside

--- a/style/burguer.css
+++ b/style/burguer.css
@@ -183,4 +183,22 @@ header .menu-icon div {
     .hero .container {
         flex-direction: column;
     }
+
+    .hero .leftside {
+        text-align: center;
+        padding-bottom: 40px;
+    }
+
+    .hero .rightside {
+        padding-bottom: 50px;
+    }
+
+    .hero .rightside img {
+        height: 300px;
+    }
+
+    .hero h1 {
+        font-size: 44px;
+        line-height: 50px;
+    }
 }
