--- a/style/burguer.css
+++ b/style/burguer.css
@@ -170,6 +170,16 @@ header .menu-icon div {
 }
 
 
+
+/* SEARCH */
+.search {
+    background-color: #1f1f1f;
+    padding: 80px 0;
+    margin-top: -100px;
+}
+
+
+
 /* RESPONSIVE */
 @media (max-width: 820px) {
     header nav {
