--- a/style/burguer.css
+++ b/style/burguer.css
@@ -178,6 +178,22 @@ header .menu-icon div {
     margin-top: -100px;
 }
 
+.search .title {
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.search .sides {
+    display: flex;
+    margin-top: 30px;
+    gap: 100px;
+}
+
+.search .leftside,
+.search .rightside {
+    flex: 1;
+}
+
 
 
 /* RESPONSIVE */
