Style: responsive in search

--- a/style/burguer.css
+++ b/style/burguer.css
@@ -249,4 +249,19 @@ header .menu-icon div {
         font-size: 44px;
         line-height: 50px;
     }
+
+    .search {
+        padding-bottom: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .search .title {
+        text-align: center;
+    }
+
+    .search .sides {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
