--- a/style/burguer.css
+++ b/style/burguer.css
@@ -218,6 +218,19 @@ header .menu-icon div {
 }
 
 
+/* PRODUCTS */
+main .products-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 40px 0;
+}
+
+
+
+
+
+
 /* RESPONSIVE */
 @media (max-width: 820px) {
     header nav {
