Style: responsive in products

--- a/style/burguer.css
+++ b/style/burguer.css
@@ -334,4 +334,14 @@ main .products-grid {
         flex-direction: column;
         gap: 20px;
     }
+
+    main .products-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    main .products-grid {
+        grid-template-columns: 1fr;
+    }
 }
