Style: responsive in footer

--- a/style/burguer.css
+++ b/style/burguer.css
@@ -367,6 +367,11 @@ footer .copyrights a:hover {
     main .products-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    footer .container {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
 @media (max-width: 500px) {
